Simultaneous change via LocalR

--- a/SSHSample.html
+++ b/SSHSample.html
@@ -1,1 +1,3 @@
-No sure why this file is empty. I am anyways adding some text from the remote repository. 
+No sure why this file is empty. I am anyways adding some text from the remote repository.
+
+This is simultaneous change that I am making via Local Repository. 
