Simultaneous change on RemoteR

--- a/SSHSample.html
+++ b/SSHSample.html
@@ -1,1 +1,2 @@
-No sure why this file is empty. I am anyways adding some text from the remote repository. 
+No sure why this file is empty. I am anyways adding some text from the remote repository.
+This is a simultaneous change that I am making on Origin or Remote Repository. 
